--- a/src/components/Card/Card.css
+++ b/src/components/Card/Card.css
@@ -1,11 +1,13 @@
 .card {
-    padding: 6px 12px;
+    padding: 0 12px;
+    line-height: 26px;
     background-color: #fff;
     border-radius: 3px;
     box-shadow: 0 1px 0 rgba(9,30,66,.25);
-    cursor: pointer;
-    display: block;
-    margin-bottom: 8px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    margin: 8px 0;
     max-width: 300px;
     min-height: 20px;
     text-decoration: none;
@@ -14,4 +16,39 @@
 
 .card:hover {
     background-color: rgb(218, 218, 218);
+}
+
+.card:hover .card__edit-btn {
+    display: flex;
+}
+
+.card-edit-buttons {
+    display: flex;
+}
+
+
+
+.card__edit-btn {
+    background-color: transparent;
+    cursor: pointer;
+    display: none;
+    border-radius: 4px;
+    justify-content: center;
+    margin-right: 5px;
+    align-items: center;
+    width: 20px;
+    height: 20px;
+    border: none;
+}
+.card__edit-btn:hover {
+    background-color: #fff;
+}
+
+.card__edit-btn:last-child {
+    margin-right: 0;
+}
+
+.card__edit-btn img {
+    width: 12px;
+    height: 12px;
 }
