--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -13,7 +13,7 @@ html, body, #root {
 .app {
     padding: 15px;
     padding-top: 50px;
-    background-image: url('./trello-bg.jpg');
+    background-image: url('../../assets/trello-second-bg.jpg');
     height: 100%;
     background-position: center;
     background-size: cover;
