--- a/src/components/Card/Card.css
+++ b/src/components/Card/Card.css
@@ -7,7 +7,7 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
-    margin: 8px 0;
+    margin-bottom: 8px;
     max-width: 300px;
     min-height: 20px;
     text-decoration: none;
