--- a/src/components/EditField/EditField.css
+++ b/src/components/EditField/EditField.css
@@ -4,7 +4,7 @@
     background-color: rgb(255, 255, 255);
     border-radius: 3px;
     border: none;
-    margin: 8px 0;
+    margin-bottom: 8px;
     display: flex;
     width: 100%;
 }
@@ -16,4 +16,18 @@
 .edit-field--list {
     height: 29px;
     margin: 3.5px 0;
+}
+
+.edit-field__button {
+    position: absolute;
+    bottom: -42px;
+    padding: 10px 20px;
+    border-radius: 6px;
+    border: none;
+    background-color: rgb(93, 165, 0);
+    cursor: pointer;
+}
+
+.edit-form {
+    position: relative;
 }
