--- a/src/components/AddForm/AddForm.css
+++ b/src/components/AddForm/AddForm.css
@@ -11,6 +11,7 @@
     font-family: 'Roboto', sans-serif;
     resize: none;
     max-width: 300px;
+    margin-top: 10px;
     min-height: 20px;
 }
 
@@ -32,7 +33,10 @@
     padding: 5px 10px 5px;
 }
 
+.add-form {
+    padding: 0 10px;
 
+}
 
 .add-form__bottom {
     display: flex;
