--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -6,16 +6,32 @@
 }
 
 html, body, #root {
-    
     height: 100%;
+    background-image: url('../../assets/trello-second-bg.jpg');
+    background-position: center;
+    background-size: cover;
 }
 
 .app {
     padding: 15px;
     padding-top: 50px;
-    background-image: url('../../assets/trello-second-bg.jpg');
-    height: 100%;
-    background-position: center;
-    background-size: cover;
+    overflow-y: auto;
+    width: 100%;
+    height: calc(100% - 10px);
     display: flex;
+    margin-bottom: 10px;
+}
+
+.app::-webkit-scrollbar {
+    width: 1em;
+}
+   
+.app::-webkit-scrollbar-track {
+    box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
+}
+
+.app::-webkit-scrollbar-thumb {
+    background-color: darkgrey;
+    outline: 1px solid slategrey;
+    border-radius: 10px;
 }
