--- a/src/components/Card/Card.css
+++ b/src/components/Card/Card.css
@@ -1,6 +1,5 @@
 .card {
-    padding: 0 12px;
-    line-height: 26px;
+    padding: 8px 10px;
     background-color: #fff;
     border-radius: 3px;
     box-shadow: 0 1px 0 rgba(9,30,66,.25);
@@ -12,6 +11,8 @@
     min-height: 20px;
     text-decoration: none;
     color: #172b4d;
+    word-break: break-all;
+    position: relative;
 }
 
 .card:hover {
@@ -23,10 +24,11 @@
 }
 
 .card-edit-buttons {
+    position: absolute;
+    right: 10px;
+    top: 7px;
     display: flex;
 }
-
-
 
 .card__edit-btn {
     background-color: transparent;
@@ -39,6 +41,7 @@
     width: 20px;
     height: 20px;
     border: none;
+    background-color: rgba(255, 255, 255, 0.431);
 }
 .card__edit-btn:hover {
     background-color: #fff;
