--- a/src/components/List/List.css
+++ b/src/components/List/List.css
@@ -11,14 +11,18 @@
     border-radius: 3px;
     box-sizing: border-box;
     display: flex;
+    min-width: 272px;
     flex-direction: column;
     max-height: 100%;
     position: relative;
-    padding: 5px 10px 5px;
+    padding: 5px 0;
     white-space: normal;
 }
 
+
 .list__title {
+    word-break: break-all;
+    margin: 0 5px;
     font-weight: 700;
     padding-right: 10px;
     color: #172b4d;
@@ -26,16 +30,42 @@
     justify-content: space-between;
 }
 .list__title-field {
-    padding-left: 10px;
-    line-height: 36px;
     width: 100%;
+    padding: 12px;
 }
 .list__title .list__delete-btn {
     background-color: transparent;
     border: none;
     color: #727E92;
+    width: 46px;
+    text-align-last: right;
     cursor: pointer;
 }
 .list__title .list__delete-btn:hover {
     text-decoration: underline;
+}
+
+.list-cards-wrapper {
+    min-height: 1px;
+    padding: 0 5px;
+    margin: 0 5px;
+}
+
+.overflow-auto {
+    overflow: auto;
+}
+
+.list-cards-wrapper::-webkit-scrollbar {
+    width: 3px;
+}
+   
+.list-cards-wrapper::-webkit-scrollbar-track {
+    box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
+    
+}
+
+.list-cards-wrapper::-webkit-scrollbar-thumb {
+    background-color: darkgrey;
+    outline: 1px solid slategrey;
+    border-radius: 10px;
 }
